--- a/1 - Practice_Exercise_2.ipynb
+++ b/1 - Practice_Exercise_2.ipynb
@@ -9,10 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The string contains only alphabets.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "user_input = input(\"Enter a string: \")\n",
+    "\n",
+    "\n",
+    "if user_input.isalpha():\n",
+    "    print(\"The string contains only alphabets.\")\n",
+    "else:\n",
+    "    print(\"The string contains characters other than alphabets.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -28,7 +45,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user_input = input(\"Enter a string: \")\n",
+    "\n",
+    "\n",
+    "if user_input.isalnum() and any(char.isalpha() for char in user_input) and any(char.isdigit() for char in user_input):\n",
+    "    print(\"The string contains both alphabets and numbers.\")\n",
+    "else:\n",
+    "    print(\"The string does not contain both alphabets and numbers.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,7 +67,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user_input = input(\"Enter a string: \")\n",
+    "\n",
+    "\n",
+    "has_alpha = any(char.isalpha() for char in user_input)\n",
+    "has_digit = any(char.isdigit() for char in user_input)\n",
+    "\n",
+    "if has_alpha and has_digit:\n",
+    "    print(\"The string contains both alphabets and at least one number.\")\n",
+    "else:\n",
+    "    print(\"The string does not contain both alphabets and at least one number.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,10 +89,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import string\n",
+    "\n",
+    "\n",
+    "user_input = input(\"Enter a string: \")\n",
+    "\n",
+    "\n",
+    "special_characters = set(string.punctuation)\n",
+    "\n",
+    "\n",
+    "has_alpha = any(char.isalpha() for char in user_input)\n",
+    "has_digit = any(char.isdigit() for char in user_input)\n",
+    "has_special = any(char in special_characters for char in user_input)\n",
+    "\n",
+    "if has_alpha and has_digit and has_special:\n",
+    "    print(\"The string contains alphabets, at least one number, and at least one special character.\")\n",
+    "else:\n",
+    "    print(\"The string does not meet all the criteria.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +124,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import string\n",
+    "\n",
+    "\n",
+    "special_characters = set(string.punctuation)\n",
+    "\n",
+    "def is_valid_string(s):\n",
+    "    \"\"\"Check if the string contains alphabets, at least one number, and at least one special character.\"\"\"\n",
+    "    has_alpha = any(char.isalpha() for char in s)\n",
+    "    has_digit = any(char.isdigit() for char in s)\n",
+    "    has_special = any(char in special_characters for char in s)\n",
+    "    return has_alpha and has_digit and has_special\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "   \n",
+    "    user_input = input(\"Enter a string: \")\n",
+    "    \n",
+    "    \n",
+    "    if is_valid_string(user_input):\n",
+    "        print(\"The string contains alphabets, at least one number, and at least one special character.\")\n",
+    "        break  \n",
+    "    else:\n",
+    "        print(\"The string does not meet all the criteria. Please try again.\")"
+   ]
   }
  ],
  "metadata": {
@@ -89,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
