--- a/3 - non_graded_exercise_2.ipynb
+++ b/3 - non_graded_exercise_2.ipynb
@@ -36,14 +36,83 @@
      "output_type": "stream",
      "text": [
       "Welcome to Hangman\n",
-      "Current word: _ _ _ _ _ _ _ _ _ _ _\n",
-      "Attempts left: 10\n",
-      "Invalid Character. Please enter a single letter.\n",
-      "Current word: _ _ _ _ _ _ _ _ _ _ _\n",
+      "Current word: _ _ _ _ _ _ _ _ _\n",
       "Attempts left: 10\n",
       "Incorrect guess.\n",
-      "Current word: _ _ _ _ _ _ _ _ _ _ _\n",
-      "Attempts left: 9\n"
+      "Current word: _ _ _ _ _ _ _ _ _\n",
+      "Attempts left: 9\n",
+      "Correct guess!\n",
+      "Current word: d _ _ _ _ _ _ _ _\n",
+      "Attempts left: 9\n",
+      "Incorrect guess.\n",
+      "Current word: d _ _ _ _ _ _ _ _\n",
+      "Attempts left: 8\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d _ _ _ _ _ _ _ _\n",
+      "Attempts left: 8\n",
+      "Incorrect guess.\n",
+      "Current word: d _ _ _ _ _ _ _ _\n",
+      "Attempts left: 7\n",
+      "Incorrect guess.\n",
+      "Current word: d _ _ _ _ _ _ _ _\n",
+      "Attempts left: 6\n",
+      "Incorrect guess.\n",
+      "Current word: d _ _ _ _ _ _ _ _\n",
+      "Attempts left: 5\n",
+      "Correct guess!\n",
+      "Current word: d e _ e _ _ _ e _\n",
+      "Attempts left: 5\n",
+      "Correct guess!\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 5\n",
+      "Incorrect guess.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "Invalid Character. Please enter a single letter.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 4\n",
+      "Incorrect guess.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 3\n",
+      "Incorrect guess.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 2\n",
+      "You've already guessed that letter. Try another one.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 2\n",
+      "Incorrect guess.\n",
+      "Current word: d e _ e _ _ _ e r\n",
+      "Attempts left: 1\n",
+      "Incorrect guess.\n",
+      "Sorry, you're out of attempts.\n",
+      "Thank you for playing. See you next time.\n"
      ]
     }
    ],
