--- a/1 - Practice_Exercise_2.ipynb
+++ b/1 - Practice_Exercise_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The string does not contain both alphabets and numbers.\n"
+     ]
+    }
+   ],
    "source": [
     "user_input = input(\"Enter a string: \")\n",
     "\n",
@@ -64,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The string does not contain both alphabets and at least one number.\n"
+     ]
+    }
+   ],
    "source": [
     "user_input = input(\"Enter a string: \")\n",
     "\n",
@@ -89,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The string does not meet all the criteria.\n"
+     ]
+    }
+   ],
    "source": [
     "import string\n",
     "\n",
@@ -121,9 +145,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string does not meet all the criteria. Please try again.\n",
+      "The string contains alphabets, at least one number, and at least one special character.\n"
+     ]
+    }
+   ],
    "source": [
     "import string\n",
     "\n",
