--- a/2 - pointers_for_exercise_2.ipynb
+++ b/2 - pointers_for_exercise_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shuffled list: ['sheep', 'baa', 'Baa', 'black']\n"
+      "Shuffled list: ['baa', 'Baa', 'sheep', 'black']\n"
      ]
     }
    ],
